[workspace]
members = ["ripestat", "ripestat-cli", "ripestat-common"]
resolver = "3"

[workspace.package]
rust-version = "1.85"
version = "0.0.1"
edition = "2024"
license = "MIT"

[workspace.dependencies]

# http client library
reqwest = {version = "0.12", features = ["json", "stream", "native-tls-vendored"]}

# serialization / deserialization library
serde = { version = "1.0", features = [ "derive" ] }

# error macros
thiserror = "2.0.12"

[workspace.lints.rust]
unsafe_code = "forbid"
