[workspace]
members = ["ripestat", "ripestat-cli", "ripestat-common"]
resolver = "3"

[workspace.package]
rust-version = "1.85"
version = "0.0.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/andrelia-hacks/ripestat"

[workspace.dependencies]

# async traits
async-trait = "0.1"

# chrono (time and date library)
chrono = { version = "0.4", features = ["alloc", "std", "clock", "serde"], default-features = false }

# headers (http headers)
headers = "0.4"

# http client library
reqwest = {version = "0.12", features = ["json", "stream", "native-tls-vendored"]}

# serialization / deserialization library
serde = { version = "1.0", features = [ "derive" ] }

# json serializer
serde_json = "1.0"

# enum utilities
strum = "0.24"
strum_macros = "0.24"

# error macros
thiserror = "2.0.12"

# tokio async runtime
tokio = { version = "1.35", features = [ "full" ] }


# tracing (logging)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# url
url = "2.5"

[workspace.lints.rust]
unsafe_code = "forbid"
