[package]
name = "ripestat-cli"
description = "Stubbed out CLI tool for interacting with the RIPEstat API"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]

ripestat = { version = "0.0.4", path = "../ripestat" }
ripestat-common = { version = "0.0.4", path = "../ripestat-common" }

serde_json.workspace = true
thiserror.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
