[package]
name = "ripestat-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true

[lints]
workspace = true
