[package]
name = "ripestat-common"
description = "Common structs/enums for the RIPEstat API"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

exclude = ["/src/resources/test_files/*"]

[dependencies]
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true

[lints]
workspace = true
