[package]
name = "ripestat"
description = "Rust client for the RIPEstat API"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]

ripestat-common = { version = "0.0.5", path = "../ripestat-common" }

chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[lints]
workspace = true
